methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:11: error: ';' expected but 'else' found.
else return false
^